--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head> this is my restaurant </head>
-<body> testing 1 </body>
+<head>
+  <title> River Bistro </title>
+</head>
+<body>
+
+
+
+
+
+ </body>
 </html>
