Restaurant Site 1 Final

--- a/Home.html
+++ b/Home.html
@@ -2,51 +2,53 @@
 <!--
 Name: C.R. Oberembt
 Date Created: 01/19/2019
-Most recent revision: 01/19/2019
+Most recent revision: 01/20/2019
 This is a project for The Software Guild
 -->
 <html lang="en">
 
-<head>
-  <title> River Bistro </title>
-</head>
+  <head>
+    <title> River Bistro </title>
+  </head>
 
-<body>
+  <body>
 
-  <header>
-    <p> Home Page </p>
-  </header>
-  <hr />
+    <header>
+      <p> Home Page </p>
+    </header>
+    <hr />
 
-  <h1> River Bistro </h1>
-<hr />
+    <h1> River Bistro </h1>
 
-<nav>
-    <p><a href="home.html">Home</a></p>
-</nav>
+    <hr />
 
-<nav>
-    <p><a href="menu.html">Menu</a></p>
-</nav>
+    <nav>
+      <p> <a href="home.html">Home</a> </p>
+    </nav>
 
-<nav>
-    <p><a href="contact-us.html">Contact Us</a></p>
-</nav>
+    <nav>
+      <p> <a href="menu.html">Menu</a> </p>
+    </nav>
 
-<hr />
+    <nav>
+      <p> <a href="contact-us.html">Contact Us</a> </p>
+    </nav>
 
-  <img src="images/river-saint-paul-final.jpg" alt="photo of the Mississippi river and part of the Saint Paul skyline" />
+    <hr />
 
-<p> Our Story <br />
-We believe food should be delicious, accessible, and most importantly, eaten with good friends. At our modest restaurant on the river, you only have to bring the friends. Come as you are: after a long day, before the big game, passing through to the next adventure. Our chef, R. Ruby, has created a menu of American street food with an elevated twist. Please warm up by the fire in our cozy dining area or cool off on our patio with the Mississippi river breeze during a hot summer evening. We have an extensive wine and seasonal craft beer list all meant to be enjoyed in a shareable bottle or growler. Give us a call to inquire about our catering options for small and large events.
- </p>
-<hr />
+    <img src="images/river-saint-paul-final.jpg" alt="photo of the Mississippi river and part of the Saint Paul skyline" />
 
-<footer>
-    <p> 111 River Road, Saint Paul, MN, 55102 <br />
-      <br />
-      (612) 111-1111 </p>
-</footer>
+    <p> Our Story <br />
+      We believe food should be delicious, accessible, and most importantly, eaten with good friends. At our modest restaurant on the river, you only have to bring the friends. Come as you are: after a long day, before the big game, passing through to the next adventure. Our chef, R. Ruby, has created a menu of American street food with an elevated twist. Please warm up by the fire in our cozy dining area or cool off on our patio with the Mississippi river breeze during a hot summer evening. We have an extensive wine and seasonal craft beer list all meant to be enjoyed in a shareable bottle or growler. Give us a call or submit your contact information to inquire about our catering options for small and large events.
+    </p>
+
+    <hr />
+
+    <footer>
+      <p> 111 River Road, Saint Paul, MN, 55102 <br />
+        <br />
+          (612) 111-1111 </p>
+    </footer>
 
  </body>
 
