--- a/Menu.html
+++ b/Menu.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Menu</title>
-</head>
+<!--
+Name: C.R. Oberembt
+Date Created: 01/19/2019
+Most recent revision: 01/20/2019
+This is a project for The Software Guild
+-->
+<html lang="en">
 
-<body>
+  <head>
+    <title> River Bistro </title>
+  </head>
 
-    this is the menu body
+  <body>
 
-</body>
-</html
+    <header>
+      <p> Menu </p>
+    </header>
+    <hr />
+
+    <h1> River Bistro </h1>
+
+    <hr />
+
+    <nav>
+      <p> <a href="home.html">Home</a> </p>
+    </nav>
+
+    <nav>
+      <p> <a href="menu.html">Menu</a> </p>
+    </nav>
+
+    <nav>
+      <p> <a href="contact-us.html">Contact Us</a> </p>
+    </nav>
+
+    <hr />
+
+    <div> <b> Burger and Fries </b> <br />
+      An American Classic! <br />
+      Your choice - with or without cheese <br />
+      Pickle, onion, tomato, and lettuce <br />
+      Served wth our famous thick-cut french fries <br />
+      $7.95 <br />
+    </div>
+
+    <br />
+
+    <div> <b> Hot Dog and Chips </b> <br />
+      A Summer Classic! <br />
+      Your choice - white or wheat bun <br />
+      Relish, mustard, and ketchup <br />
+      Served wth our house-made chips <br />
+      $7.95 <br />
+    </div>
+
+    <br />
+
+    <div> <b> Italian Sausage and Peppers </b> <br />
+      An All-Time Favorite! <br />
+      Your choice - mild or spicy <br />
+      Cole slaw <br />
+      Served with garlic mashers <br />
+      $10.95 <br />
+    </div>
+
+    <br />
+
+    <div> <b> Tenderloin Sandwich and Chips </b> <br />
+      Really Hits the Spot! <br />
+      Plain or sesame seed bun <br />
+      Pickle, onion, tomato, and lettuce <br />
+      Served wth our house-made chips <br />
+      $8.95 <br />
+    </div>
+
+    <br />
+
+    <div> <b> House Salad </b> <br />
+      On the Lighter Side <br />
+      Your choice - with or without cheese <br />
+      Iceberg lettuce, tomatoes, and peppers <br />
+      Thousand Island or Ranch dressing <br />
+      Served with a dinner roll <br />
+      $6.95 <br />
+    </div>
+
+    <br />
+
+    <div> <b> Brisket Sandwich and Fries </b> <br />
+      A Taste of Texas! <br />
+      Smoked brisket on thick-cut Texas Toast <br />
+      Cole slaw <br />
+      Served wth our famous thick-cut french fries <br />
+      $7.95 <br />
+    </div>
+
+    <hr />
+
+    <footer>
+      <p> 111 River Road, Saint Paul, MN, 55102 <br />
+      <br />
+      (612) 111-1111 </p>
+    </footer>
+
+ </body>
+
+</html>
