--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Menu</title>
-</head>
+<!--
+Name: C.R. Oberembt
+Date Created: 01/19/2019
+Most recent revision: 01/20/2019
+This is a project for The Software Guild
+-->
+<html lang="en">
 
-<body>
+  <head>
+    <title> River Bistro </title>
+  </head>
 
-    this is the contact us body
+  <body>
 
-</body>
-</html
+    <header>
+      <p> Contact Us </p>
+    </header>
+    <hr />
+
+    <h1> River Bistro </h1>
+
+    <hr />
+
+    <nav>
+      <p> <a href="home.html">Home</a> </p>
+    </nav>
+
+    <nav>
+      <p> <a href="menu.html">Menu</a> </p>
+    </nav>
+
+    <nav>
+      <p> <a href="contact-us.html">Contact Us</a> </p>
+    </nav>
+
+    <hr />
+
+    <form action="fakePage.html" method="POST">
+
+            <label for="name">Name:</label> <br />
+            <input type="text" id="name" name="name"> <br />
+            <label for="email">Email:</label> <br />
+            <input type="text" id="email" name="email"> <br />
+            <label for="phone">Phone:</label> <br />
+            <input type="text" id="phone" name="phone"> <br />
+            <br />
+
+            Reason for Inquiry: <br />
+            <select name="reason">
+                <option value="catering">Catering</option>
+                <option value="private party">Private Party</option>
+                <option value="feedback">Feedback</option>
+                <option value="other">Other</option>
+            </select> <br />
+            <br />
+
+            <label for="info">Additional Information:</label> <br />
+            <textarea id="info" name="info"></textarea> <br />
+            <br />
+
+            Have you been to the restaurant? <br />
+            <input type="radio" name="answer" value="NO" checked />No <br />
+            <input type="radio" name="answer" value="YES" />Yes <br />
+            <br />
+
+            Best days to contact you: <br />
+            <input type="checkbox" name="myChoices" value="Monday" />M <br />
+            <input type="checkbox" name="myChoices" value="Tuesday" />T <br />
+            <input type="checkbox" name="myChoices" value="Wednesday" />W <br />
+            <input type="checkbox" name="myChoices" value="Thursday" />Th <br />
+            <input type="checkbox" name="myChoices" value="Friday" />F <br />
+            <br />
+
+            <input type="submit" name="submit" value="Send Request"> <br />
+     </form>
+
+     <hr />
+
+     <footer>
+       <p> 111 River Road, Saint Paul, MN, 55102 <br />
+       <br />
+       (612) 111-1111 </p>
+     </footer>
+
+ </body>
+
+</html>
