--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,15 @@ This is a project for The Software Guild
 
   <head>
     <title> River Bistro </title>
+    <style>
+      div {
+        font-family: 'Rubik', sans-serif
+      }
+    </style>
+    <link href="https://fonts.googleapis.com/css?family=Rubik|Staatliches" rel="stylesheet">
+    <link href="Styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+    <style>
+    </style>
   </head>
 
   <body>
@@ -16,33 +25,22 @@ This is a project for The Software Guild
     <header>
       <p> Home Page </p>
     </header>
-    <hr />
 
     <h1> River Bistro </h1>
 
-    <hr />
-
     <nav>
-      <p> <a href="home.html">Home</a> </p>
+      <a href="home.html"> Home </a> &nbsp
+
+      <a href="menu.html"> Menu </a> &nbsp
+
+      <a href="contact-us.html"> Contact Us </a>
     </nav>
 
-    <nav>
-      <p> <a href="menu.html">Menu</a> </p>
-    </nav>
+    <img style="padding: 10px 100px 10px 100px" src="images/salad-final.jpg" alt="photo of salad on table" />
 
-    <nav>
-      <p> <a href="contact-us.html">Contact Us</a> </p>
-    </nav>
-
-    <hr />
-
-    <img src="images/river-saint-paul-final.jpg" alt="photo of the Mississippi river and part of the Saint Paul skyline" />
-
-    <p> Our Story <br />
+    <div style="padding: 10px 100px 10px 100px"> Our Story <br />
       We believe food should be delicious, accessible, and most importantly, eaten with good friends. At our modest restaurant on the river, you only have to bring the friends. Come as you are: after a long day, before the big game, passing through to the next adventure. Our chef, R. Ruby, has created a menu of American street food with an elevated twist. Please warm up by the fire in our cozy dining area or cool off on our patio with the Mississippi river breeze during a hot summer evening. We have an extensive wine and seasonal craft beer list all meant to be enjoyed in a shareable bottle or growler. Give us a call or submit your contact information to inquire about our catering options for small and large events.
-    </p>
-
-    <hr />
+    </div>
 
     <footer>
       <p> 111 River Road, Saint Paul, MN, 55102 <br />
