--- a/Menu.html
+++ b/Menu.html
@@ -9,6 +9,17 @@ This is a project for The Software Guild
 
   <head>
     <title> River Bistro </title>
+    <style>
+    table {
+        width: 100%;
+        background-color: LightGray;
+        font-family: 'Rubik', sans-serif;
+    }
+    </style>
+    <link href="https://fonts.googleapis.com/css?family=Rubik|Staatliches" rel="stylesheet">
+    <link href="Styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+    <style>
+    </style>
   </head>
 
   <body>
@@ -16,86 +27,107 @@ This is a project for The Software Guild
     <header>
       <p> Menu </p>
     </header>
-    <hr />
 
     <h1> River Bistro </h1>
 
-    <hr />
-
     <nav>
-      <p> <a href="home.html">Home</a> </p>
+      <a href="home.html"> Home </a> &nbsp
+
+      <a href="menu.html"> Menu </a> &nbsp
+
+      <a href="contact-us.html"> Contact Us </a>
     </nav>
 
-    <nav>
-      <p> <a href="menu.html">Menu</a> </p>
-    </nav>
+    <table>
 
-    <nav>
-      <p> <a href="contact-us.html">Contact Us</a> </p>
-    </nav>
+       <tr>
 
-    <hr />
+           <td>
+             <span style="font-weight: bold; font-size: 1.3em"> Burger and Fries </span> <br />
+              An American Classic! <br />
+              Your choice - with or without cheese <br />
+              Pickle, onion, tomato, and lettuce <br />
+              Served wth our famous thick-cut french fries <br />
+              $7.95 <br />
+            </td>
+           <td>
+             <span style="font-weight: bold; font-size: 1.3em"> Hot Dog and Chips </span> <br />
+               A Summer Classic! <br />
+               Your choice - white or wheat bun <br />
+               Relish, mustard, and ketchup <br />
+               Served wth our house-made chips <br />
+               $7.95 <br />
+           </td>
+           <td>
+             <span style="font-weight: bold; font-size: 1.3em"> Italian Sausage and Peppers </span> <br />
+               An All-Time Favorite! <br />
+               Your choice - mild or spicy <br />
+               Cole slaw <br />
+               Served with garlic mashers <br />
+               $10.95 <br />
+           </td>
 
-    <div> <b> Burger and Fries </b> <br />
-      An American Classic! <br />
-      Your choice - with or without cheese <br />
-      Pickle, onion, tomato, and lettuce <br />
-      Served wth our famous thick-cut french fries <br />
-      $7.95 <br />
-    </div>
+       </tr>
 
-    <br />
+       <tr>
 
-    <div> <b> Hot Dog and Chips </b> <br />
-      A Summer Classic! <br />
-      Your choice - white or wheat bun <br />
-      Relish, mustard, and ketchup <br />
-      Served wth our house-made chips <br />
-      $7.95 <br />
-    </div>
+           <td>
+             <span style="font-weight: bold; font-size: 1.3em"> Tenderloin Sandwich and Chips </span> <br />
+             Really Hits the Spot! <br />
+             Plain or sesame seed bun <br />
+             Pickle, onion, tomato, and lettuce <br />
+             Served wth our house-made chips <br />
+             $8.95 <br />
+           </td>
+           <td>
+             <span style="font-weight: bold; font-size: 1.3em"> House Salad </span> <br />
+               On the Lighter Side <br />
+               Your choice - with or without cheese <br />
+               Iceberg lettuce, tomatoes, and peppers <br />
+               Thousand Island or Ranch dressing <br />
+               Served with a dinner roll <br />
+               $6.95 <br />
+           </td>
+           <td>
+             <span style="font-weight: bold; font-size: 1.3em"> Brisket Sandwich and Fries </span> <br />
+               A Taste of Texas! <br />
+               Smoked brisket on thick-cut Texas Toast <br />
+               Cole slaw <br />
+               Served wth our famous thick-cut french fries <br />
+               $7.95 <br />
+           </td>
 
-    <br />
+       </tr>
 
-    <div> <b> Italian Sausage and Peppers </b> <br />
-      An All-Time Favorite! <br />
-      Your choice - mild or spicy <br />
-      Cole slaw <br />
-      Served with garlic mashers <br />
-      $10.95 <br />
-    </div>
+       <br />
+       <br />
 
-    <br />
+    </table>
 
-    <div> <b> Tenderloin Sandwich and Chips </b> <br />
-      Really Hits the Spot! <br />
-      Plain or sesame seed bun <br />
-      Pickle, onion, tomato, and lettuce <br />
-      Served wth our house-made chips <br />
-      $8.95 <br />
-    </div>
+    <table style="width: 50%">
+       <tr>
+           <th> <span style="font-weight: bold; font-size: 1.3em"> Beverages </span> </th> <br />
+       </tr>
+       <tr>
+           <td> Root Beer </td>
+           <td> $3.00 </td>
+       </tr>
+       <tr>
+           <td> Bottled Water </td>
+           <td> $1.25 </td>
+       </tr>
+       <tr>
+           <td> Lemonade </td>
+           <td> $1.00 </td>
+       </tr>
+       <tr>
+           <td> Iced Tea </td>
+           <td> $1.25 </td>
+       </tr>
+   </table
 
-    <br />
-
-    <div> <b> House Salad </b> <br />
-      On the Lighter Side <br />
-      Your choice - with or without cheese <br />
-      Iceberg lettuce, tomatoes, and peppers <br />
-      Thousand Island or Ranch dressing <br />
-      Served with a dinner roll <br />
-      $6.95 <br />
-    </div>
-
-    <br />
-
-    <div> <b> Brisket Sandwich and Fries </b> <br />
-      A Taste of Texas! <br />
-      Smoked brisket on thick-cut Texas Toast <br />
-      Cole slaw <br />
-      Served wth our famous thick-cut french fries <br />
-      $7.95 <br />
-    </div>
-
-    <hr />
+   <br />
+   <br />
 
     <footer>
       <p> 111 River Road, Saint Paul, MN, 55102 <br />
