--- a/Menu.html
+++ b/Menu.html
@@ -2,13 +2,20 @@
 <!--
 Name: C.R. Oberembt
 Date Created: 01/19/2019
-Most recent revision: 01/20/2019
+Most recent revision: 01/21/2019
 This is a project for The Software Guild
 -->
 <html lang="en">
 
   <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title> River Bistro </title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <style>
     table {
         width: 100%;
@@ -22,7 +29,9 @@ This is a project for The Software Guild
     </style>
   </head>
 
-  <body>
+  <body id="bootstrap-overrides">
+
+    <div class="container-fluid">
 
     <header>
       <p> Menu </p>
@@ -31,11 +40,31 @@ This is a project for The Software Guild
     <h1> River Bistro </h1>
 
     <nav>
-      <a href="home.html"> Home </a> &nbsp
 
-      <a href="menu.html"> Menu </a> &nbsp
+      <ul class="nav nav-pills">
 
-      <a href="contact-us.html"> Contact Us </a>
+        <li class="nav-item">
+        <a class="nav-link active fas fa-home" href="home.html"></a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="home.html"></a>
+
+        <li class="nav-item">
+        <a class="nav-link active" href="menu.html"> Menu </a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="menu.html"></a>
+        </li>
+
+        <li class="nav-item">
+        <a class="nav-link active" href="contact-us.html"> Contact Us </a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="contact-us.html"></a>
+        </li>
+
+      </ul>
+
     </nav>
 
     <table>
@@ -134,6 +163,12 @@ This is a project for The Software Guild
       <br />
       (612) 111-1111 </p>
     </footer>
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
  </body>
 
