--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -2,7 +2,7 @@
 <!--
 Name: C.R. Oberembt
 Date Created: 01/19/2019
-Most recent revision: 01/21/2019
+Most recent revision: 01/25/2019
 This is a project for The Software Guild
 -->
 <html lang="en">
@@ -15,20 +15,27 @@ This is a project for The Software Guild
     <title> River Bistro </title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
     <style>
-      .required {
-      font-weight: bold
+
+      #bootstrap-overrides form {
+        font-family: 'Rubik', sans-serif;
+        padding: 20px 300px 20px 300px;
       }
-      form {
-        font-family: 'Rubik', sans-serif
+
+      #bootstrap-overrides #additional-info {
+        width: 50%
       }
+
     </style>
 
-    <link href="https://fonts.googleapis.com/css?family=Rubik|Staatliches" rel="stylesheet">
-    <link href="Styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Rubik|Staatliches" rel="stylesheet">
+      <link href="Styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+
     <style>
     </style>
+
   </head>
 
   <body id="bootstrap-overrides">
@@ -39,11 +46,33 @@ This is a project for The Software Guild
       <p> Contact Us </p>
     </header>
 
+    <header class="jumbotron">
+    <h1> New Location Opening Soon </h1>
+    <h2 class="font-italic"> 333 River Road, Minneapolis, MN, 55413 </h2>
+    </header>
+
+    <div id="restaurant-carousel" class="carousel slide" data-ride="carousel">
+
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+        <p id="carousel-text-1"> <b> We're opening a new location! </b> </p>
+        </div>
+
+        <div class="carousel-item">
+        <p id="carousel-text-2"> <b> We're rolling out our seasonal menu, with special options for this season. </b> </p>
+        </div>
+
+        <div class="carousel-item">
+        <p id="carousel-text-3"> <b> The Drink of the Month is SG Special Brew. </b> </p>
+        </div>
+        </div>
+        </div>
+
     <h1> River Bistro </h1>
 
     <nav>
 
-      <ul class="nav nav-pills">
+      <ul class="nav nav-tabs">
 
         <li class="nav-item">
         <a class="nav-link active fas fa-home" href="home.html"></a>
@@ -73,44 +102,93 @@ This is a project for The Software Guild
 
     <form action="fakePage.html" method="POST">
 
-          <div class="required">
 
-            <label for="name">Name:</label> <br />
-            <input type="text" id="name" name="name" required> <br />
-            <label for="email">Email:</label> <br />
-            <input type="text" id="email" name="email" required> <br />
-            <label for="phone">Phone:</label> <br />
-            <input type="text" id="phone" name="phone" required> <br />
-              </div>
+            <div class "required">
+
+            <div class="form-group form-inline">
+              <label for="Name"> <b> Name: </b> &nbsp </label>
+              <input type="text" class="form-control" id="name" required>
+            </div>
+
+            <div class="form-group form-inline">
+              <label for="email address"> <b> Email: </b> &nbsp </label>
+              <input type="email" class="form-control" id="email-address" required>
+            </div>
+
+            <div class="form-group form-inline">
+              <label for="Phone"> <b> Phone: </b> &nbsp </label>
+              <input type="text" class="form-control" id="phone" required>
+
+            </div>
+
+            <div class="form-group form-inline">
+              <label for="select reason"> Reason for Inquiry: &nbsp </label>
+              <select class="form-control" id="select-reason">
+                <option> Catering </option>
+                <option> Private Party </option>
+                <option> Feedback </option>
+                <option> Other </option>
+              </select>
+            </div>
+
+            <div class="form-group form-inline">
+              <label for="Additional Info">Additional Information: &nbsp </label>
+              <textarea class="form-control" id="additional-info" rows="2"></textarea>
+            </div>
+
+            Have you been to the restaurant? &nbsp
+
+            <div class = "form-check form-check-inline">
+            <input class = "form-check-input" type= "radio" name="answer" id="visited-restaurant" value="NO" checked>
+            <label class = "form-check-label" for = "visited-restaurant">
+            No
+            </label>
+            </div>
+
+            <div class = "form-check form-check-inline">
+            <input class = "form-check-input" type= "radio" name="answer" id="yet-to-visit-restaurant" value="YES">
+            <label class = "form-check-label" for = "yet-to-visit-restaurant">
+            Yes
+            </label>
+            </div>
+
+            <br />
             <br />
 
-            Reason for Inquiry: <br />
-            <select name="reason">
-                <option value="catering">Catering</option>
-                <option value="private party">Private Party</option>
-                <option value="feedback">Feedback</option>
-                <option value="other">Other</option>
-            </select> <br />
+            Best days to contact you: &nbsp
+
+            <div class = "form-check form-check-inline">
+                <input class = "form-check-input" type = "checkbox" id = "monday" value = "Monday">
+                <label class="form-check-label" for="monday"> M </label>
+            </div>
+
+            <div class = "form-check form-check-inline">
+                <input class = "form-check-input" type = "checkbox" id = "tuesday" value = "Tuesday">
+                <label class="form-check-label" for="tuesday"> T </label>
+            </div>
+
+            <div class = "form-check form-check-inline">
+                <input class = "form-check-input" type = "checkbox" id = "wednesday" value = "Wednesday">
+                <label class="form-check-label" for="wednesday"> W </label>
+            </div>
+
+            <div class = "form-check form-check-inline">
+                <input class = "form-check-input" type = "checkbox" id = "thursday" value = "Thursday">
+                <label class="form-check-label" for="thursday"> Th </label>
+            </div>
+
+            <div class = "form-check form-check-inline">
+                <input class = "form-check-input" type = "checkbox" id = "friday" value = "Friday">
+                <label class="form-check-label" for="friday"> F </label>
+            </div>
+
+            <br />
             <br />
 
-            <label for="info">Additional Information:</label> <br />
-            <textarea id="info" name="info"></textarea> <br />
-            <br />
+            <button type="submit" class="btn btn-primary"> Send Request </button>
+     <br />
+     <br />
 
-            Have you been to the restaurant? <br />
-            <input type="radio" name="answer" value="NO" checked />No <br />
-            <input type="radio" name="answer" value="YES" />Yes <br />
-            <br />
-
-            Best days to contact you: <br />
-            <input type="checkbox" name="myChoices" value="Monday" />M <br />
-            <input type="checkbox" name="myChoices" value="Tuesday" />T <br />
-            <input type="checkbox" name="myChoices" value="Wednesday" />W <br />
-            <input type="checkbox" name="myChoices" value="Thursday" />Th <br />
-            <input type="checkbox" name="myChoices" value="Friday" />F <br />
-            <br />
-
-            <input type="submit" name="submit" value="Send Request"> <br />
      </form>
 
      <br />
@@ -126,6 +204,8 @@ This is a project for The Software Guild
      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+ <script> alert("This site is best viewed with JavaScript enabled."); </script>
 
  </body>
 
