--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
 <!--
 Name: C.R. Oberembt
 Date Created: 01/19/2019
-Most recent revision: 01/21/2019
+Most recent revision: 01/22/2019
 This is a project for The Software Guild
 -->
 <html lang="en">
@@ -15,16 +15,20 @@ This is a project for The Software Guild
     <title> River Bistro </title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
     <style>
-      div {
+      #our-story {
         font-family: 'Rubik', sans-serif
       }
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Rubik|Staatliches" rel="stylesheet">
-    <link href="Styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Rubik|Staatliches" rel="stylesheet">
+      <link href="Styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+
     <style>
     </style>
+
   </head>
 
   <body id="bootstrap-overrides">
@@ -40,11 +44,28 @@ This is a project for The Software Guild
     <h2 class="font-italic"> 333 River Road, Minneapolis, MN, 55413 </h2>
     </header>
 
+    <div id="restaurant-carousel" class="carousel slide" data-ride="carousel">
+
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+        <p id="carousel-text-1"> <b> We're opening a new location! </b> </p>
+        </div>
+
+        <div class="carousel-item">
+        <p id="carousel-text-2"> <b> We're rolling out our seasonal menu, with special options for this season. </b> </p>
+        </div>
+
+        <div class="carousel-item">
+        <p id="carousel-text-3"> <b> The Drink of the Month is SG Special Brew. </b> </p>
+        </div>
+        </div>
+        </div>
+
     <h1> River Bistro </h1>
 
     <nav>
 
-      <ul class="nav nav-pills">
+      <ul class="nav nav-tabs">
 
         <li class="nav-item">
         <a class="nav-link active fas fa-home" href="home.html"></a>
@@ -78,7 +99,7 @@ This is a project for The Software Guild
     <br />
     <br />
 
-    <div style="padding: 10px 100px 10px 100px"> Our Story <br />
+    <div id="our-story" style="padding: 10px 100px 10px 100px"> Our Story <br />
       We believe food should be delicious, accessible, and most importantly, eaten with good friends. At our modest restaurant on the river, you only have to bring the friends. Come as you are: after a long day, before the big game, passing through to the next adventure. Our chef, R. Ruby, has created a menu of American street food with an elevated twist. Please warm up by the fire in our cozy dining area or cool off on our patio with the Mississippi river breeze during a hot summer evening. We have an extensive wine and seasonal craft beer list all meant to be enjoyed in a shareable bottle or growler. Give us a call or submit your contact information to inquire about our catering options for small and large events.
     </div>
 
@@ -95,6 +116,8 @@ This is a project for The Software Guild
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script> alert("This site is best viewed with JavaScript enabled."); </script>
 
  </body>
 
