--- a/Menu.html
+++ b/Menu.html
@@ -2,7 +2,7 @@
 <!--
 Name: C.R. Oberembt
 Date Created: 01/19/2019
-Most recent revision: 01/21/2019
+Most recent revision: 01/25/2019
 This is a project for The Software Guild
 -->
 <html lang="en">
@@ -15,18 +15,24 @@ This is a project for The Software Guild
     <title> River Bistro </title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
     <style>
+
     table {
         width: 100%;
         background-color: LightGray;
         font-family: 'Rubik', sans-serif;
     }
+
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Rubik|Staatliches" rel="stylesheet">
-    <link href="Styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Rubik|Staatliches" rel="stylesheet">
+      <link href="Styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+
     <style>
     </style>
+
   </head>
 
   <body id="bootstrap-overrides">
@@ -37,11 +43,33 @@ This is a project for The Software Guild
       <p> Menu </p>
     </header>
 
+    <header class="jumbotron">
+    <h1> New Location Opening Soon </h1>
+    <h2 class="font-italic"> 333 River Road, Minneapolis, MN, 55413 </h2>
+    </header>
+
+    <div id="restaurant-carousel" class="carousel slide" data-ride="carousel">
+
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+        <p id="carousel-text-1"> <b> We're opening a new location! </b> </p>
+        </div>
+
+        <div class="carousel-item">
+        <p id="carousel-text-2"> <b> We're rolling out our seasonal menu, with special options for this season. </b> </p>
+        </div>
+
+        <div class="carousel-item">
+        <p id="carousel-text-3"> <b> The Drink of the Month is SG Special Brew. </b> </p>
+        </div>
+        </div>
+        </div>
+
     <h1> River Bistro </h1>
 
     <nav>
 
-      <ul class="nav nav-pills">
+      <ul class="nav nav-tabs">
 
         <li class="nav-item">
         <a class="nav-link active fas fa-home" href="home.html"></a>
@@ -169,6 +197,8 @@ This is a project for The Software Guild
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+ <script> alert("This site is best viewed with JavaScript enabled."); </script>
 
  </body>
 
